--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,9 @@
-/*
-    Theme Name: WeBuild
-    Theme URL: https://bootstrapmade.com/free-bootstrap-coming-soon-template-countdwon/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-*/
 /* ==== Google font ==== */
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web:200,400');
- html,body { height: 100%; margin: 0px; padding: 0px; }
+ 
+
+html,body { height: 100%; margin: 0px; padding: 0px; }
+
 body {
 	background: #394864;
     font-family: 'Titillium Web', sans-serif;
@@ -19,7 +16,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Titillium Web', sans-serif;
-    font-weight: 400;
+    font-weight: 200;
     color: #bcd;
 }
 
@@ -28,11 +25,11 @@ h1 {
 }
 
 h3 {
-	font-weight: 400;
+	font-weight: 200;
 }
 
 h4 {
-	font-weight: 400;
+	font-weight: 200;
 	font-size: 20px;
 }
 
@@ -43,7 +40,7 @@ p {
 
 
 a {
-    color: #ACBAC1;
+    color: rgba(0,0,0,0.7);
     word-wrap: break-word;
     -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
     -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
@@ -54,7 +51,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #4F92AF;
+    color: rgba(0,0,0,0.9);
     text-decoration: none;
     outline: 0;
 }
@@ -84,7 +81,7 @@ a:after {
   padding: 10px 20px;
   margin-bottom: 0;
   font-size: 14px;
-  font-weight: normal;
+  font-weight: 200;
   line-height: 1.428571429;
   text-align: center;
   white-space: nowrap;
@@ -101,27 +98,44 @@ a:after {
 }
 
 .btn-theme  {
-  color: #fff;
-  background-color: #4F92AF;
-  border-color: #4F92AF;
+  color: #555e57;
+  font-size: 14px;
+  font-weight: 200;
+  background-color: #c2d6d2;
+  border-color: #c2d6d2;
   transition: background 0.3s;
 }
 .btn-theme:hover  {
   color: #fff;
-  background-color: #5cacce;
-  border-color: #5cacce;
+  background-color: #50ea72;
+  border-color: #50ea72;
 }
+
+
 form.signup input  {
 	height: 42px;
 	width: 250px !important;
 	border-radius: 0;
-	border: none;
+  border-color: rgba(0,0,0,0.2);
 }
 form.signup button.btn {
 	font-weight: 700;
 }
 form.signup input.form-control:focus {
 	border-color: #fd680e;
+}
+
+form.signup textarea {
+  height: 142px;
+  width: 250px !important;
+  border-radius: 0;
+  border-color: rgba(0,0,0,0.2);
+}
+
+form.signup textarea.form-control:focus {
+  border-color: #fd680e;
+  border-radius: 0;
+  border-color: rgba(0,0,0,0.4);
 }
 
 
